[tool.poetry]
authors = ["Piotr Katolik <katolus@ventress.org>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.9',
]
description = "CLI tool for managing your FaaS resources"
license = "MIT"
name = "functions-cli"
packages = [
  {include = "functions"},
]
readme = "README.md"
version = "0.1.0a4"

[tool.poetry.scripts]
functions = "functions.main:app"

[tool.poetry.dependencies]
docker = "^5.0.2"
google-api-python-client = {version = "^2.28.0", optional = true}
google-auth = {version = "^2.3.3", optional = true}
google-cloud-pubsub = {version = "^2.8.0", optional = true}
pydantic = "^1.8.2"
python = "^3.7"
toml = "^0.10.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0"}
bpython = "^0.21"
bump2version = "^1.0.1"
flake8 = "^4.0.1"
flake8-typing-imports = "^1.11.0"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^5.2"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
types-toml = "^0.10.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.4"
mkdocs-include-markdown-plugin = "^3.2.3"
mkdocs-material-extensions = "^1.0.3"
mkdocs-git-revision-date-localized-plugin = "^0.11.1"

[tool.poetry.extras]
gcp = [
  "google-api-python-client",
  "google-auth",
  "google-cloud-pubsub",
]

[tool.mypy]
mypy_path = "~/stubs/"

[tool.black]
line-length = 88
# skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/profiles.html
profile = "black"
# Adjust profile
# https://pycqa.github.io/isort/docs/configuration/options.html
force_single_line = true
group_by_package = true
order_by_type = false
single_line_exclusions = ['typing']
wrap_length = 80

skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.pyright]
# This is for pylance/pyright extension of vscode. Remove me if you're not intented to use vscode.
# include = ["src"]
exclude = [
  ".git",
  ".eggs",
  ".github",
  ".history",
  ".idea",
  ".tox",
  ".vscode",
  "docs",
  ".venv",
  "**/__pycache__",
] # Commented out due to its influence on performance
# ignore = ["src/oldstuff"]
stubPath = "/home/katolus/stubs/"
venv = ".venv"

reportGeneralTypeIssues = false
reportMissingImports = true
reportMissingTypeStubs = false

pythonPlatform = "Linux"
pythonVersion = "3.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
